tests/expected_invalid_duplicate_proves_clause.diag.out
<input>:5:52: error: function signature repeats `proves` for proof type 'Receipt'
    public fn check() -> Receipt proves Receipt proves Receipt {
                                                       ^^^^^^^
